--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,155 @@
-h1{
-  color: red;
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500&display=swap');
+
+/* Asterisk wildcard selector to override default styles by the browser */
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h2{
-  color: blue;
+/* General styles */
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Oswald', sans-serif;
+
+  /* Generic project styles */
+  color: #3a3a3a;
+
+}
+
+header {
+
+  background-color: #ffffff;
+  padding: 0 1rem;
+  position: fixed;
+  z-index: 99;
+  width: 100%;
+  box-shadow: 0 2px 2px #3a3a3a;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+
+}
+
+header a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1 {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  color: #252525;
+}
+
+#menu {
+  font-size: 110%;
+  letter-spacing: 4px;
+  list-style-type: none;
+}
+
+#menu > li {
+  margin-bottom: 1em;
+}
+
+.active {
+  border-bottom: 1px solid #3a3a3a;
+}
+
+/* navbar styles with dropdown toggle */
+
+nav {
+  position: absolute;
+  background-color: #ffffff;
+  width: 100%;
+  left: 0;
+  padding: 0 1rem;
+  box-shadow: 0 2px 2px #3a3a3a;
+  display: none;
+  top: 100%;
+}
+
+/* nav toggle */
+#nav-toggle:checked~nav {
+  display: block;
+}
+
+#nav-toggle{
+  display: none;
+}
+
+.nav-toggle-label {
+  font-size: 2rem;
+}
+
+main{
+  /* Make main element take up any surplus space to push footer down */
+  flex: 1 0 auto;
+  margin-top: 70px;
+  
+}
+
+/* hero */
+#hero {
+  height: 600px;
+  width: 100%;
+  background: url("../images/hero-image.webp") no-repeat center center/cover;
+}
+
+footer{
+#social-networks {
+  text-align: center;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  list-style-type: none;
+}
+
+}
+
+/* media query: tablets and larger (768px and up) */
+@media screen and (min-width: 768px) {
+  nav {
+    display: block;
+    position: relative;
+    box-shadow: none;
+    width: fit-content;
+    padding-right: 1rem;
+  }
+  
+#menu {
+  display: flex;
+}
+
+#menu li {
+  padding-left: 1rem;
+}
+
+.nav-toggle-label {
+  display: none;
+}
+
+#logo {
+  font-size: 200%;
+  line-height: 75px;
+  margin: 0 0.5rem;
+}
+
+/* main content */
+          main {
+            margin-top: 145px;
+          }
+}
+
+/* large devices (laptop and desktop, 992px and up) */
+@media screen and (min-width: 992px) {
+  #menu a:hover {
+    border-bottom: 1px solid #3a3a3a;
+  }
+  
 }
