--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,11 +258,11 @@ main{
  }
 
 footer
-#social-networks {
+.social-networks {
   text-align: center;
   padding: 20px 0;
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   justify-content: space-evenly;
   list-style-type: none;
 }
@@ -274,11 +274,11 @@ footer
   text-align: center;
 }
 
-#social-networks li {
+.social-networks li {
   display: inline;
 }
 
-#social-networks {
+.social-networks {
   font-size: 160%;
   margin: 1%;
   padding: 5%;
